# rust-rand-facade

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
